[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"

rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

futures = "0.3.30"
tokio = {version = "1.40.0", features = ["rt-multi-thread", "sync", "signal", "time", "macros"]}

async-tungstenite = { version = "0.27.0", features = ["tokio-runtime", "async-tls", "async-native-tls"] }
serde = {version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
base64 = "0.22.1"
borsh = {version = "1.5.1", features = ["derive"]}

[dev-dependencies]
mockall = "0.13.0"
ws-mock = "0.2.0"
